Add alt text to card images

--- a/cardEXAMPLE/card.html
+++ b/cardEXAMPLE/card.html
@@ -23,7 +23,7 @@
               <div class="card-image">
                 <!-- <span class="card-title">العقارات</span> -->
                 <a href="https://github.com/MyRiamTakawy/project-landing-page">
-                  <img src="./imgs/building.png" />
+                  <img src="./imgs/building.png" alt="building" />
                 </a>
               </div>
               <div class="card-text">
@@ -47,7 +47,7 @@
               <div class="card-image">
                 <!-- <span class="card-title">العقارات</span> -->
                 <a href="https://github.com/MyRiamTakawy/project-landing-page">
-                  <img src="./imgs/archiving.png" />
+                  <img src="./imgs/archiving.png" alt="archiving" />
                 </a>
               </div>
               <div class="card-text">
