--- a/cardEXAMPLE/card.html
+++ b/cardEXAMPLE/card.html
@@ -1,22 +1,19 @@
 <!DOCTYPE html>
 <html lang="ar">
   <head>
-    <title>CSS Cards</title>
-
     <meta charset="UTF-8" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300&display=swap" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i&display=swap" rel="stylesheet" />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.css" rel="stylesheet" />
-
     <link rel="stylesheet" href="card.css" />
+
+    <title>Cards</title>
   </head>
   <body>
     <div class="card-category-2">
       <ul>
         <!-- if you need to add new card just copy any <li> section and update the content -->
-
+        <!-- -------------------------------------------------------------------------------------------------- -->
         <li>
           <div class="img-card iCard-style3">
             <div class="card-content">
@@ -40,7 +37,7 @@
             </div>
           </div>
         </li>
-
+        <!-- -------------------------------------------------------------------------------------------------- -->
         <li>
           <div class="img-card iCard-style3">
             <div class="card-content">
@@ -61,6 +58,7 @@
             </div>
           </div>
         </li>
+        <!-- -------------------------------------------------------------------------------------------------- -->
       </ul>
     </div>
   </body>
