Add new card to the HTML file

--- a/cardEXAMPLE/card.html
+++ b/cardEXAMPLE/card.html
@@ -59,6 +59,27 @@
           </div>
         </li>
         <!-- -------------------------------------------------------------------------------------------------- -->
+        <li>
+          <div class="img-card iCard-style3">
+            <div class="card-content">
+              <div class="card-image">
+                <!-- <span class="card-title">العقارات</span> -->
+                <a href="https://github.com/MyRiamTakawy/project-landing-page">
+                  <img src="./imgs/mostafeden.png" alt="archiving" />
+                </a>
+              </div>
+              <div class="card-text">
+                <p>برنامج المستفيدين , برنامج لتسجيل المستفيدين والمستفيدات وتسجيل المساعدات المقدمة لهم</p>
+              </div>
+            </div>
+            <div class="card-link">
+              <a href="https://github.com/MyRiamTakawy/project-landing-page" title="Read Full">
+                <span>الذهاب للموقع</span>
+              </a>
+            </div>
+          </div>
+        </li>
+        <!-- -------------------------------------------------------------------------------------------------- -->
       </ul>
     </div>
   </body>
