--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
 
     <section class="cards" id="مشاريع">
-      <h2 class="title">مشاريع</h2>
+      <h2 class="title">المشاريع</h2>
       <div class="content">
         <div class="card">
           <div class="img">
@@ -51,10 +51,23 @@
             <button class="Button">عرض المزيد</button>
         </div>
         </div>
-      </div>
+      </div> 
     </section>
     <footer class="footer">
-      
+      <div class="container">
+        <ul>
+          <h4>تواصل معانا</h4>
+          <a href="https://wa.me/17712204921"><i class="fa-solid fa-phone"></i>+1 (771) 220-4921</a>
+        </ul>
+      <div class="social-icons">
+        <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+        <a href="#"><i class="fa-brands fa-twitter"></i></a>
+        <a href="#"><i class="fa-brands fa-facebook"></i></a>
+        <a href="#"><i class="fa-regular fa-location-dot"></i></a>
+        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+        <a href="#"><i class="fa-brands fa-youtube"></i></a>
+      </div>
+    </div>
     </footer>
     <!-- <div class="circle-bottom"></div> -->
     <!-- <header> -->
