--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
     <title>Document</title>
   </head>
   <body>
-    <!-- <div class="circle-top"></div> -->
     <header>
-    <a class="logo" img src="images/Coat_of_arms_of_Iraq.svg.png">
+    <a class="logo"> <img src="images/Coat_of_arms_of_Iraq.svg.png" alt="logo"/></a>
     <nav class="navigation">
       <h2><a>جمهورية العراق</a></h2>
       <br><a>مديرية السلامة</a></br>
     </header>
 
+    <h2 class="title">المشاريع</h2>
+
     <section class="cards" id="مشاريع">
-      <h2 class="title">المشاريع</h2>
       <div class="content">
         <div class="card">
           <div class="img">
@@ -53,28 +53,23 @@
         </div>
       </div> 
     </section>
+
     <footer class="footer">
-      <div class="container">
-        <ul>
-          <h4>تواصل معانا</h4>
-          <a href="https://wa.me/17712204921"><i class="fa-solid fa-phone"></i>+1 (771) 220-4921</a>
-        </ul>
-      <div class="social-icons">
+      <div class="footer-social">
         <a href="#"><i class="fa-brands fa-linkedin"></i></a>
         <a href="#"><i class="fa-brands fa-twitter"></i></a>
         <a href="#"><i class="fa-brands fa-facebook"></i></a>
-        <a href="#"><i class="fa-regular fa-location-dot"></i></a>
         <a href="#"><i class="fa-brands fa-instagram"></i></a>
         <a href="#"><i class="fa-brands fa-youtube"></i></a>
       </div>
-    </div>
+      <div class="single-footer">
+        <h4>تواصل معانا</h4>
+        <ul>
+         <li><a href="https://wa.me/17712204921"><i class="fa-solid fa-phone"></i>+1 (771) 220-4921</a></li>
+        </ul>
+      </div>
     </footer>
-    <!-- <div class="circle-bottom"></div> -->
-    <!-- <header> -->
-      <!-- <div class="header-content">
-        <span>برامج</span>
-        <h1>مديرية السلامة</h1>
-      </div> -->
-    <!-- </header> -->
+    
+    <script src="./fontawesome.js" crossorigin="anonymous"></script>
   </body>
 </html>
