--- a/index.html
+++ b/index.html
@@ -1,71 +1,57 @@
 <!DOCTYPE html>
 <html lang="ar">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style.css" />
-    <link rel="icon" href="images/Coat_of_arms_of_Iraq.svg.png" />
-    <title>مديرية السلامة</title>
+    <meta charset="UTF-8" >
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <link rel="stylesheet" href="./style.css" >
+    <link rel="icon" href="images/Coat_of_arms_of_Iraq.svg.png">
+    <title>Document</title>
   </head>
   <body>
     <header>
-      <a class="logo">
-        <img src="imgs/logo.png" alt="logo" />
-      </a>
-      <nav class="navigation">
-        <h2>جمهورية العراق</h2>
-        <br />
-        <p>مديرية السلامة</p>
-      </nav>
+    <a class="logo"> <img src="images/Coat_of_arms_of_Iraq.svg.png" alt="logo"/></a>
+    <nav class="navigation">
+      <h2><a>جمهورية العراق</a></h2>
+      <br><a>مديرية السلامة</a></br>
     </header>
 
     <h2 class="title">المشاريع</h2>
 
-    <section class="cards">
+    <section class="cards" id="مشاريع">
       <div class="content">
-        <!-- --------------------------------------------------------------------------------------------------- -->
-        <a href="#">
-          <div class="card">
-            <div class="img">
-              <img src="./imgs/building.png" alt="building" />
-            </div>
-            <div class="card-link">
-              <a class="name" href="#" title="مشروع العقارات"><h3>مشروع العقارات</h3></a>
-              <p class="description">
-                عبارة عن برنامج يقوم بإدارة العقارات والمنازل والمحلات التجارية والمنشآت الأخرى بكل سهولة ويسر
-              </p>
-              <button class="Button">عرض المزيد</button>
-            </div>
+        <div class="card">
+          <div class="img">
+            <img src="images/image.jpg">
           </div>
-        </a>
-        <!-- --------------------------------------------------------------------------------------------------- -->
-        <a href="kirollos.live">
-          <div class="card">
-            <div class="img">
-              <img src="./imgs/archiving.png" alt="archiving" />
-            </div>
-            <div class="card-link">
-              <a class="name" href="#" title="مشروع الأرشفة"><h3>مشروع الأرشفة</h3></a>
-              <p class="description">برنامج لحفظ الملفات والمستندات والصور بطريقة مرتبة ومنظمة وسهلة</p>
+          <div class="card-link">
+            <a class="name" href="#" title="مشروع العقارات"><span><h3>مشروع العقارات</h3></span></a>
+            <p class="description"> عبارة عن برنامج يقوم بإدارة العقارات والمنازل والمحلات التجارية والمنشآت
+              الأخرى بكل سهولة ويسر</p>
               <button class="Button">عرض المزيد</button>
-            </div>
+        </div>
+        </div>
+        <div class="card">
+          <div class="img">
+            <img src="images/shutterstock-2074361962-665026912263-scaled.webp">
           </div>
-        </a>
-        <!-- --------------------------------------------------------------------------------------------------- -->
-        <a href="#">
-          <div class="card">
-            <div class="img">
-              <img src="./imgs/mostafeden.png" alt="mostafeden" />
-            </div>
-            <div class="card-link">
-              <a class="name" href="#" title="مشروع المستفيدين"><h3>مشروع المستفيدين</h3></a>
-              <p class="description">برنامج لتسجيل المستفيدين والمستفيدات وتسجيل المساعدات المقدمة لهم</p>
-              <button class="Button">عرض المزيد</button>
-            </div>
+          <div class="card-link">
+            <a class="name" href="#" title="مشروع الأرشفة"><span><h3>مشروع الأرشفة</h3></span></a>
+            <p class="description">برنامج لحفظ الملفات والمستندات والصور بطريقة مرتبة ومنظمة وسهلة</p>
+            <button class="Button">عرض المزيد</button>
+        </div>
+        </div>
+        <div class="card">
+          <div class="img">
+            <img src="images/028507fc-df43-4373-9b63-d0500f20c555_16x9_1200x676.webp">
           </div>
-        </a>
-        <!-- --------------------------------------------------------------------------------------------------- -->
-      </div>
+          <div class="card-link">
+            <a class="name" href="#" title="مشروع المستفيدين"><span><h3>مشروع المستفيدين</h3></span></a>
+            <p class="description">برنامج لتسجيل المستفيدين والمستفيدات وتسجيل المساعدات المقدمة لهم</p>
+            <button class="Button">عرض المزيد</button>
+        </div>
+        </div>
+      </div> 
     </section>
 
     <footer class="footer">
@@ -79,13 +65,11 @@
       <div class="single-footer">
         <h4>تواصل معانا</h4>
         <ul>
-          <li>
-            <a href="https://wa.me/17712204921"><i class="fa-solid fa-phone"></i>+1 (771) 220-4921</a>
-          </li>
+         <li><a href="https://wa.me/17712204921"><i class="fa-solid fa-phone"></i>+1 (771) 220-4921</a></li>
         </ul>
       </div>
     </footer>
-
+    
     <script src="./fontawesome.js" crossorigin="anonymous"></script>
   </body>
 </html>
