--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
     <link rel="icon" href="images/Coat_of_arms_of_Iraq.svg.png" />
-    <title>Document</title>
+    <title>مديرية السلامة</title>
   </head>
   <body>
     <header>
@@ -22,6 +22,7 @@
     <section class="cards" id="مشاريع">
       <div class="content">
         <!-- start card#1 -->
+        <a href="#">
         <div class="card">
           <div class="img">
             <img src="images/image.jpg" />
@@ -36,8 +37,10 @@
             <button class="Button">عرض المزيد</button>
           </div>
         </div>
+      </a>
         <!-- end card#1 -->
         <!-- start card#2 -->
+        <a href="#">
         <div class="card">
           <div class="img">
             <img src="images/shutterstock-2074361962-665026912263-scaled.webp" />
@@ -50,8 +53,10 @@
             <button class="Button">عرض المزيد</button>
           </div>
         </div>
+      </a>
         <!-- end card#2 -->
         <!-- card#3 -->
+        <a href="#">
         <div class="card">
           <div class="img">
             <img src="images/028507fc-df43-4373-9b63-d0500f20c555_16x9_1200x676.webp" />
@@ -64,6 +69,7 @@
             <button class="Button">عرض المزيد</button>
           </div>
         </div>
+      </a>
         <!-- end card#3 -->
       </div>
     </section>
